--- a/6-2 卷积.ipynb
+++ b/6-2 卷积.ipynb
@@ -12,31 +12,40 @@
       "D:\\Anaconda\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow.examples.tutorial'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-44fc8fd3088f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexamples\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtutorial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmnist\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0minput_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow.examples.tutorial'"
-     ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.examples.tutorial.mnist import input_data"
+    "from tensorflow.examples.tutorials.mnist import input_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting C:\\Users\\Administrator\\Desktop\\MNIST_data\\train-images-idx3-ubyte.gz\n",
+      "Extracting C:\\Users\\Administrator\\Desktop\\MNIST_data\\train-labels-idx1-ubyte.gz\n",
+      "Extracting C:\\Users\\Administrator\\Desktop\\MNIST_data\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting C:\\Users\\Administrator\\Desktop\\MNIST_data\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow.python.ops.nn' has no attribute 'sotfmax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-6ceddc41c008>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;31m#计算输出\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m \u001b[0mprediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msotfmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh_fc1_drop\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mW_fc2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb_fc2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow.python.ops.nn' has no attribute 'sotfmax'"
+     ]
+    }
+   ],
    "source": [
     "mnist = input_data.read_data_sets('C:\\\\Users\\\\Administrator\\\\Desktop\\\\MNIST_data',one_hot=True)\n",
     "\n",
@@ -66,7 +75,7 @@
     "# 池化层\n",
     "def max_pool_2x2(x):\n",
     "    #Ksize[1,x,y,1]  x,y代表窗口大小；\n",
-    "    return tf.nn.max_pool(x,ksize=[1,2,2,1],strides[1,2,2,1],padding='SAME')\n",
+    "    return tf.nn.max_pool(x,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')\n",
     "\n",
     "# 定义两个placeholder\n",
     "x = tf.placeholder(tf.float32,[None,784]) # 28*28\n",
@@ -88,8 +97,8 @@
     "\n",
     "# 初始化第二个卷积层的权值和偏置\n",
     "# 32 传入通道；64 传出通道；\n",
-    "W_conv1 = weight_variable([5,5,32,64])# 5*5的采样窗口，64个卷积核从32个平面抽取特征\n",
-    "b_conv1 = bias_variable([64])#每个卷积核一个偏置值\n",
+    "W_conv2 = weight_variable([5,5,32,64])# 5*5的采样窗口，64个卷积核从32个平面抽取特征\n",
+    "b_conv2 = bias_variable([64])#每个卷积核一个偏置值\n",
     "\n",
     "#把h_pool1和权值向量进行卷积，再加上偏置值，然后应用于relu激活函数\n",
     "h_conv2 = tf.nn.relu(conv2d(h_pool1,W_conv2)+b_conv2)\n",
@@ -118,7 +127,7 @@
     "b_fc2 = bias_variable([10])\n",
     "\n",
     "#计算输出\n",
-    "prediction = tf.nn.sotfmax(tf.matmul(h_fc1_drop,W_fc2)+b_fc2)\n",
+    "prediction = tf.nn.softmax(tf.matmul(h_fc1_drop,W_fc2)+b_fc2)\n",
     "\n",
     "\n",
     "#交叉熵代缴函数\n",
@@ -143,6 +152,15 @@
     "        acc = sess.run(accuracy,feed_dic={x:mnist.test.images,y:mnist.test.labels,keep_prob:1.0})\n",
     "        print(\"Iter  :\"+str(epoch)+\",Testing Accuracy :\"+str(acc))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
