--- a/第6章作业.ipynb
+++ b/第6章作业.ipynb
@@ -160,10 +160,12 @@
     "        tf.summary.scalar('accuracy',accuracy)\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
+    "    writer = tf.summary.FileWriter('logs/',sess.graph)\n",
     "    for epoch in range(21):\n",
     "        for batch in range(n_batch):\n",
     "            batch_xs,batch_ys = mnist.train.next_batch(batch_size)\n",
     "            sess.run(train_step,feed_dict={x:batch_xs,y:batch_ys,keep_prob:0.7})\n",
+    "        writer.add_summary(summary,epoch) \n",
     "        acc = sess.run(accuracy,feed_dict={x:mnist.test.images,y:mnist.test.labels,keep_prob:1.})\n",
     "        print(\"Iter  :\"+str(epoch)+\",Testing Accuracy:\"+str(accuracy))\n",
     "        "
